Update annonces email

--- a/Artywiz/annonces.html
+++ b/Artywiz/annonces.html
@@ -114,8 +114,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                             style="font-family:Century gothic, Arial, Sans-serif; font-size:42px; color:#FFFFFF;font-weight: bold;">
                                             <multi label="headline">
                                                 <p align="center" style="margin-top: 26px;">Annoncez les matchs <br>
-                                                    des équipes de votre club <br>
-                                                    et valorisez vos sponsors!</p>
+                                                    de vos équipes</p>
                                             </multi>
                                         </td>
                                     </tr>
@@ -165,10 +164,14 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                             style="font-family:Open sans, Arial, Sans-serif; font-size:13px; color:#979797;line-height:20px;">
                                             <multi label="content">
                                                 <p align="center" style="font-weight: bold; font-size: 20px; line-height: 25px; color: #4A4A4A;">
-                                                    Réalisez vous-mêmes vos annonces de matchs
+                                                    Chaque semaine avec ARTYWIZ football, les matchs de vos équipes deviennent de véritables évènements!
                                                 </p>
                                                 <p align="left">
-                                                    Chaque semaine avec ARTYWIZ football, réalisez tous les supports de communication nécessaires pour annoncer les matchs de vos équipe, affiches à exposer dans les commerces partenaires, publication pour les réseaux sociaux, email à envoyer à votre communauté… Et profitez-en pour apporter de la visibilité à vos sponsors!
+                                                    En quelques clics de souris, réalisez tous les supports de communication pour vos annonces de matchs. Sélectionnez la date, l’adversaire, choisissez vos sponsors, la mise en page et les couleurs… Artywiz se charge du reste et vous prépare automatiquement : <br>
+                                                    - <b>des affiches</b> à exposer dans les commerces ou au club house, <br>
+                                                    - <b>des publications</b> pour les réseaux sociaux, <br>
+                                                    - <b>des emails</b> à envoyer à votre communauté et à vos partenaires <br>
+                                                    - <b>des bannières</b> à placer sur votre site web.
                                                 </p>
                                             </multi>
                                         </td>
@@ -203,7 +206,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--icon-->
                                     <tr>
                                         <td align="center" bgcolor="#F8D02F" style="line-height:0px;">
-                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1599030232/etape%20-6/publication.png" alt=""
+                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1600178915/etape%20-6/Championnat.jpg" alt=""
                                                 width="100%"
                                                 style="display:block;line-height:0px; font-size:0px; border:0px;"
                                                 editable label="image" />
@@ -217,7 +220,10 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <tr>
                                         <td align="center"
                                             style="font-family:Open sans, Arial, Sans-serif; font-size:16px; line-height: 20px; color:#3E586B; font-weight:normal;">
-                                            <single label="title">Coupe de France</single>
+                                            <single label="title">
+                                                Championnat <br>
+                                                Affiche
+                                            </single>
                                         </td>
                                     </tr>
                                     <!--end title-->
@@ -262,7 +268,10 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <tr align="center">
                                         <td
                                             style="font-family:Open sans, Arial, Sans-serif; font-size:16px; line-height: 20px; color:#3E586B;font-weight:normal;">
-                                            <single label="title">Coupe du grand est</single>
+                                            <single label="title">
+                                                Coupe du Grand Est <br>
+                                                Affiche
+                                            </single>
                                         </td>
                                     </tr>
                                     <!--end title-->
@@ -296,7 +305,10 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <tr align="center">
                                         <td
                                             style="font-family:Open sans, Arial, Sans-serif; font-size:16px; line-height: 20px; color:#3E586B;font-weight:normal;">
-                                            <single label="title">Coupe gambardella</single>
+                                            <single label="title">
+                                                Coupe Gambardella <br>
+                                                Publication Facebook
+                                            </single>
                                         </td>
                                     </tr>
                                     <!--end title-->
@@ -317,53 +329,6 @@ u + .body .full { width:100% !important; width:100vw !important;}
     </module>
     <!--end 2/2 panel-->
 
-    <!--1/1 icons-->
-    <module label="1/1 icons" auto>
-        <table class="full" align="center" bgcolor="#F7F7F7" width="100%" border="0" cellspacing="0" cellpadding="0">
-            <tr>
-                <td align="center" bgcolor="#F7F7F7">
-                    <table class="table-inner" width="600" style="max-width: 600px;" border="0" align="center"
-                        cellpadding="0" cellspacing="0">
-                        <tr>
-                            <td>
-                                <!-- left -->
-                                <table width="600" class="table-full" align="left" border="0" cellpadding="0"
-                                    cellspacing="0">
-                                    <!--icon-->
-                                    <tr>
-                                        <td align="center" bgcolor="#F8D02F" style="line-height:0px;">
-                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1600178915/etape%20-6/Championnat.jpg" alt=""
-                                                width="100%"
-                                                style="display:block;line-height:0px; font-size:0px; border:0px;"
-                                                editable label="image" />
-                                        </td>
-                                    </tr>
-                                    <!--end icon-->
-                                    <tr>
-                                        <td height="6"></td>
-                                    </tr>
-                                    <!--title-->
-                                    <tr>
-                                        <td align="center"
-                                            style="font-family:Open sans, Arial, Sans-serif; font-size:16px; line-height: 20px; color:#3E586B; font-weight:normal;">
-                                            <single label="title">Championnat</single>
-                                        </td>
-                                    </tr>
-                                    <!--end title-->
-                                </table>
-                                <!-- end left -->
-                            </td>
-                        </tr>
-                        <tr>
-                            <td height="16"></td>
-                        </tr>
-                    </table>
-                </td>
-            </tr>
-        </table>
-    </module>
-    <!--end 1/1 icons-->
-
     <!--2/2 panel-->
     <module label="2/2 Panel" auto>
         <table class="full" align="center" bgcolor="#F7F7F7" width="100%" border="0" cellspacing="0" cellpadding="0">
@@ -379,7 +344,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--img-->
                                     <tr>
                                         <td align="center" style="line-height:0px;"><img
-                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1600179095/etape%20-6/coupe_de_feminin_fb_post.jpg" alt="" width="183"
+                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1600245527/etape%20-6/Coupe_de_France_fb_post.png" alt="" width="183"
                                                 style="display:block; line-height:0px; font-size:0px; border:0px; width:100%;"
                                                 editable label="image" /></td>
                                     </tr>
@@ -391,7 +356,10 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <tr align="center">
                                         <td
                                             style="font-family:Open sans, Arial, Sans-serif; font-size:16px; line-height: 20px; color:#3E586B;font-weight:normal;">
-                                            <single label="title">Coupe de Feminin</single>
+                                            <single label="title">
+                                                Coupe de France <br>
+                                                Publication Facebook
+                                            </single>
                                         </td>
                                     </tr>
                                     <!--end title-->
@@ -425,7 +393,10 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <tr align="center">
                                         <td
                                             style="font-family:Open sans, Arial, Sans-serif; font-size:16px; line-height: 20px; color:#3E586B;font-weight:normal;">
-                                            <single label="title">Futsal</single>
+                                            <single label="title">
+                                                Coupe de France de Futsal <br>
+                                                Emailing
+                                            </single>
                                         </td>
                                     </tr>
                                     <!--end title-->
