--- a/Artywiz/annonces.html
+++ b/Artywiz/annonces.html
@@ -52,7 +52,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
         <table class="full" bgcolor="#FFFFFF" align="center" width="100%" border="0" cellspacing="0" cellpadding="0">
             <tr>
                 <td align="center" bgcolor="#787878"
-                    background="https://res.cloudinary.com/dw1zug8d6/image/upload/v1600177091/etape%20-6/header_annonce_email.png"
+                    background="https://res.cloudinary.com/dw1zug8d6/image/upload/v1600253070/etape%20-6/Annonce_header_emailing.jpg"
                     style="background-size:cover; background-position:center;">
                     <table align="center" border="0" cellpadding="0" cellspacing="0">
                         <tr>
@@ -206,7 +206,145 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--icon-->
                                     <tr>
                                         <td align="center" bgcolor="#F8D02F" style="line-height:0px;">
-                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1600178915/etape%20-6/Championnat.jpg" alt=""
+                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1600253204/etape%20-6/Coupe_de_France_Publication_Facebook.jpg" alt=""
+                                                width="100%"
+                                                style="display:block;line-height:0px; font-size:0px; border:0px;"
+                                                editable label="image" />
+                                        </td>
+                                    </tr>
+                                    <!--end icon-->
+                                    <tr>
+                                        <td height="6"></td>
+                                    </tr>
+                                    <!--title-->
+                                    <tr>
+                                        <td align="center"
+                                            style="font-family:Open sans, Arial, Sans-serif; font-size:16px; line-height: 20px; color:#3E586B; font-weight:normal;">
+                                            <single label="title">
+                                                Coupe de France <br>
+                                                Publication Facebook 
+                                            </single>
+                                        </td>
+                                    </tr>
+                                    <!--end title-->
+                                </table>
+                                <!-- end left -->
+                            </td>
+                        </tr>
+                        <tr>
+                            <td height="16"></td>
+                        </tr>
+                    </table>
+                </td>
+            </tr>
+        </table>
+    </module>
+    <!--end 1/1 icons-->
+
+    <!--2/2 panel-->
+    <module label="2/2 Panel" auto>
+        <table class="full" align="center" bgcolor="#F7F7F7" width="100%" border="0" cellspacing="0" cellpadding="0">
+            <tr>
+                <td align="center">
+                    <table class="table-inner" width="600" style="max-width: 600px;" border="0" align="center"
+                        cellpadding="0" cellspacing="0">
+                        <tr>
+                            <td>
+                                <!--left-->
+                                <table width="295" class="table-full" border="0" align="left" cellpadding="0"
+                                    cellspacing="0">
+                                    <!--img-->
+                                    <tr>
+                                        <td align="center" style="line-height:0px;"><img
+                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1600253429/etape%20-6/Coupe_du_Grand_Est_Affiche.jpg" alt="" width="183"
+                                                style="display:block; line-height:0px; font-size:0px; border:0px; width:100%;"
+                                                editable label="image" /></td>
+                                    </tr>
+                                    <!--end img-->
+                                    <tr>
+                                        <td height="6"></td>
+                                    </tr>
+                                    <!--title-->
+                                    <tr align="center">
+                                        <td
+                                            style="font-family:Open sans, Arial, Sans-serif; font-size:16px; line-height: 20px; color:#3E586B;font-weight:normal;">
+                                            <single label="title">
+                                                Coupe du Grand Est <br>
+                                                Affiche
+                                            </single>
+                                        </td>
+                                    </tr>
+                                    <!--end title-->
+                                    <tr>
+                                        <td height="15"></td>
+                                    </tr>
+                                </table>
+                                <!--end left-->
+                                <!--[if (gte mso 9)|(IE)]></td><td><![endif]-->
+                                <table width="10" align="left" border="0" cellpadding="0" cellspacing="0">
+                                    <tr>
+                                        <td height="20"></td>
+                                    </tr>
+                                </table>
+                                <!--[if (gte mso 9)|(IE)]></td><td><![endif]-->
+                                <!--right-->
+                                <table width="295" class="table-full" border="0" align="left" cellpadding="0"
+                                    cellspacing="0">
+                                    <!--img-->
+                                    <tr>
+                                        <td align="center" style="line-height:0px;"><img
+                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1600253429/etape%20-6/Coupe_Gambardella_Publication_Facebook.jpg" alt="" width="183"
+                                                style="display:block; line-height:0px; font-size:0px; border:0px; width:100%;"
+                                                editable label="image" /></td>
+                                    </tr>
+                                    <!--end img-->
+                                    <tr>
+                                        <td height="6"></td>
+                                    </tr>
+                                    <!--title-->
+                                    <tr align="center">
+                                        <td
+                                            style="font-family:Open sans, Arial, Sans-serif; font-size:16px; line-height: 20px; color:#3E586B;font-weight:normal;">
+                                            <single label="title">
+                                                Coupe Gambardella <br>
+                                                Publication Facebook
+                                            </single>
+                                        </td>
+                                    </tr>
+                                    <!--end title-->
+                                    <tr>
+                                        <td height="15"></td>
+                                    </tr>
+                                </table>
+                                <!--end right-->
+                            </td>
+                        </tr>
+                        <tr>
+                            <td height="16"></td>
+                        </tr>
+                    </table>
+                </td>
+            </tr>
+        </table>
+    </module>
+    <!--end 2/2 panel-->
+
+    <!--1/1 icons-->
+    <module label="1/1 icons" auto>
+        <table class="full" align="center" bgcolor="#F7F7F7" width="100%" border="0" cellspacing="0" cellpadding="0">
+            <tr>
+                <td align="center" bgcolor="#F7F7F7">
+                    <table class="table-inner" width="600" style="max-width: 600px;" border="0" align="center"
+                        cellpadding="0" cellspacing="0">
+                        <tr>
+                            <td>
+                                <!-- left -->
+                                <table width="600" class="table-full" align="left" border="0" cellpadding="0"
+                                    cellspacing="0">
+                                    <!--icon-->
+                                    <tr>
+                                        <td align="center" bgcolor="#F8D02F" style="line-height:0px;">
+                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1600253528/etape%20-6/Championnat_Affiche.jpg" alt=""
                                                 width="100%"
                                                 style="display:block;line-height:0px; font-size:0px; border:0px;"
                                                 editable label="image" />
@@ -256,7 +394,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--img-->
                                     <tr>
                                         <td align="center" style="line-height:0px;"><img
-                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1600178925/etape%20-6/Coupe_du_grand_est.jpg" alt="" width="183"
+                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1600253640/etape%20-6/Coupe_de_France_Feminine_Publication_Facebook.jpg" alt="" width="183"
                                                 style="display:block; line-height:0px; font-size:0px; border:0px; width:100%;"
                                                 editable label="image" /></td>
                                     </tr>
@@ -269,95 +407,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                         <td
                                             style="font-family:Open sans, Arial, Sans-serif; font-size:16px; line-height: 20px; color:#3E586B;font-weight:normal;">
                                             <single label="title">
-                                                Coupe du Grand Est <br>
-                                                Affiche
-                                            </single>
-                                        </td>
-                                    </tr>
-                                    <!--end title-->
-                                    <tr>
-                                        <td height="15"></td>
-                                    </tr>
-                                </table>
-                                <!--end left-->
-                                <!--[if (gte mso 9)|(IE)]></td><td><![endif]-->
-                                <table width="10" align="left" border="0" cellpadding="0" cellspacing="0">
-                                    <tr>
-                                        <td height="20"></td>
-                                    </tr>
-                                </table>
-                                <!--[if (gte mso 9)|(IE)]></td><td><![endif]-->
-                                <!--right-->
-                                <table width="295" class="table-full" border="0" align="left" cellpadding="0"
-                                    cellspacing="0">
-                                    <!--img-->
-                                    <tr>
-                                        <td align="center" style="line-height:0px;"><img
-                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1600179033/etape%20-6/Coupe_gambardella2.jpg" alt="" width="183"
-                                                style="display:block; line-height:0px; font-size:0px; border:0px; width:100%;"
-                                                editable label="image" /></td>
-                                    </tr>
-                                    <!--end img-->
-                                    <tr>
-                                        <td height="6"></td>
-                                    </tr>
-                                    <!--title-->
-                                    <tr align="center">
-                                        <td
-                                            style="font-family:Open sans, Arial, Sans-serif; font-size:16px; line-height: 20px; color:#3E586B;font-weight:normal;">
-                                            <single label="title">
-                                                Coupe Gambardella <br>
-                                                Publication Facebook
-                                            </single>
-                                        </td>
-                                    </tr>
-                                    <!--end title-->
-                                    <tr>
-                                        <td height="15"></td>
-                                    </tr>
-                                </table>
-                                <!--end right-->
-                            </td>
-                        </tr>
-                        <tr>
-                            <td height="16"></td>
-                        </tr>
-                    </table>
-                </td>
-            </tr>
-        </table>
-    </module>
-    <!--end 2/2 panel-->
-
-    <!--2/2 panel-->
-    <module label="2/2 Panel" auto>
-        <table class="full" align="center" bgcolor="#F7F7F7" width="100%" border="0" cellspacing="0" cellpadding="0">
-            <tr>
-                <td align="center">
-                    <table class="table-inner" width="600" style="max-width: 600px;" border="0" align="center"
-                        cellpadding="0" cellspacing="0">
-                        <tr>
-                            <td>
-                                <!--left-->
-                                <table width="295" class="table-full" border="0" align="left" cellpadding="0"
-                                    cellspacing="0">
-                                    <!--img-->
-                                    <tr>
-                                        <td align="center" style="line-height:0px;"><img
-                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1600245527/etape%20-6/Coupe_de_France_fb_post.png" alt="" width="183"
-                                                style="display:block; line-height:0px; font-size:0px; border:0px; width:100%;"
-                                                editable label="image" /></td>
-                                    </tr>
-                                    <!--end img-->
-                                    <tr>
-                                        <td height="6"></td>
-                                    </tr>
-                                    <!--title-->
-                                    <tr align="center">
-                                        <td
-                                            style="font-family:Open sans, Arial, Sans-serif; font-size:16px; line-height: 20px; color:#3E586B;font-weight:normal;">
-                                            <single label="title">
-                                                Coupe de France <br>
+                                                Coupe de France Feminine <br>
                                                 Publication Facebook
                                             </single>
                                         </td>
@@ -381,7 +431,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--img-->
                                     <tr>
                                         <td align="center" style="line-height:0px;"><img
-                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1600179094/etape%20-6/futsal_newsletter.jpg" alt="" width="183"
+                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1600253643/etape%20-6/Coupe_de_France_de_Futsal_Emailing.jpg" alt="" width="183"
                                                 style="display:block; line-height:0px; font-size:0px; border:0px; width:100%;"
                                                 editable label="image" /></td>
                                     </tr>
