- Create notif user doc template email  - Improve feminine template and annonces - Improve and rename file of mesures
- Create notif user doc template email
- Improve feminine template and annonces
- Improve and rename file of mesures

--- a/Artywiz/feminine.html
+++ b/Artywiz/feminine.html
@@ -383,8 +383,8 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <!--title-->
                                     <tr>
                                         <td height="35" align="left"
-                                            style="font-family:Open sans, Arial, Sans-serif; font-weight: bold; font-size:24px; color:#FFFFFF;">
-                                            FORMATION GRATUITE EN LIGNE
+                                            style="font-family:Open sans, Arial, Sans-serif; font-weight: bold; font-size:24px; color:#FFFFFF; text-transform: uppercase;">
+                                            Inscrivez-vous à nos sessions de formation en ligne ARTYWIZ
                                         </td>
                                     </tr>
                                     <!--end title-->
@@ -397,8 +397,7 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                             style="font-family:Open sans, Arial, Sans-serif; font-size:13px; color:#FFFFFF;line-height:28px;">
                                             <multi label="content">
                                                 <p align="left" style="font-size: 13px; line-height: 20px;">
-                                                    Inscrivez-vous à nos sessions de formation en ligne ARTYWIZ. <br>
-                                                    Chaque vendredi soir sur <span style="font-size: 18px;"><b>formations.artywiz.io/</b></span> nous présentation une thématique de communication spécifique aux clubs de football.
+                                                    Chaque semaine, sur formations.artywiz.io une thématique de communication spécifique aux clubs de football est abordée.
                                                 </p>
                                             </multi>
                                         </td>
