--- a/Artywiz/mesures.html
+++ b/Artywiz/mesures.html
@@ -133,6 +133,17 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     <tr>
                                         <td height="50"></td>
                                     </tr>
+                                    <tr>
+                                        <td
+                                            style="font-family:Century gothic, Arial, Sans-serif; font-size: 14px; color:#FFFFFF;font-weight: bold;">
+                                            <multi label="headline">
+                                                <p align="center" style="margin: 0;">AFFICHES - PUBLICATION RÉSEAUX SOCIAUX - EMAILINGS - BANNIÈRES WEB</p>
+                                            </multi>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td height="50"></td>
+                                    </tr>
                                 </table>
                             </td>
                         </tr>
@@ -160,12 +171,16 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                     cellspacing="0">
                                     <!--img-->
                                     <tr>
-                                        <td align="center" style="line-height:0px;"><img
-                                                src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1600679227/mesures-sanitaires/group-illustration.png" width="275"
-                                                style="display:block; line-height:0px; font-size:0px; border:0px; width:250px"
-                                                editable label="image" /></td>
+                                        <td align="center">
+                                            <img src="https://res.cloudinary.com/dw1zug8d6/image/upload/v1600679227/mesures-sanitaires/group-illustration.png" width="275" style="display:block; line-height:0px; font-size:0px; border:0px; width:250px" editable label="image" />
+                                        </td>
                                     </tr>
                                     <!--end img-->
+                                    <tr>
+                                        <td align="center">
+                                            <p style="font-family:Open sans, Arial, Sans-serif; font-size: 16px; color:#4A4A4A; text-transform: uppercase; font-weight: bold; margin: 0; margin-top: 30px;">POUR LES DIRIGEANTS <br> ET LES RÉFÉRENTS SANITAIRES</p>
+                                        </td>
+                                    </tr>
                                 </table>
                                 <!--end left-->
                                 <!--[if (gte mso 9)|(IE)]></td><td><![endif]-->
@@ -199,7 +214,9 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                             style="font-family:Open sans, Arial, Sans-serif; font-size: 13px; color:#979797;line-height:28px;">
                                             <multi label="content">
                                                 <p align="left" style="line-height: 20px; margin: 0;">
-                                                    Pour accompagner la mise en place des mesures sanitaires au sein de votre club, nous vous avons préparé toute une série de documents prêts à l’emploi et personnalisables.
+                                                    Pour accompagner la mise en place des mesures sanitaires au sein de votre club, nous vous avons préparé toute une série de documents prêts à l’emploi et personnalisables. <br><br>
+
+                                                    Que ce soit pour l’obligation de porter un masque, pour les distances à respecter, le lavage des mains ou les règles du Club House, réalisez l’ensemble des documents indispensables, à l’image de votre club et en quelques minutes chrono.
                                                 </p>
                                             </multi>
                                         </td>
@@ -237,8 +254,6 @@ u + .body .full { width:100% !important; width:100vw !important;}
                                             style="font-family:Open sans, Arial, Sans-serif; font-size:13px; color:#979797;line-height:20px;">
                                             <multi label="content">
                                                 <p align="left">
-                                                    Que ce soit pour l’obligation de porter un masque, pour les distances à respecter, le lavage des mains ou les règles du Club House, réalisez l’ensemble des documents indispensables, à l’image de votre club et en quelques minutes chrono. <br><br>
-
                                                     Vous pourrez les télécharger et les communiquer par tous les moyens au sein de votre club : Affichage, emails, bannière web, publication pour les réseaux sociaux... <br><br>
 
                                                     Et comme pour l’ensemble des documents réalisés sur Artywiz, vous pourrez en profiter pour valoriser vos sponsors…
